package main

import (
	"context"
	"fmt"
	"log"
	"math/rand"
	"sort"
	"time"

	sessionpb "github.com/aetherflow/aetherflow/api/proto/session"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// æ¨¡æ‹Ÿä¸åŒç½‘ç»œæ¡ä»¶ä¸‹çš„ TCP å’Œ Quantum æ€§èƒ½å¯¹æ¯”
// ä¸éœ€è¦ root æƒé™ï¼Œåœ¨åº”ç”¨å±‚æ¨¡æ‹Ÿå»¶è¿Ÿå’Œä¸¢åŒ…

type NetworkCondition struct {
	Name         string
	RTT          time.Duration // å¾€è¿”æ—¶å»¶
	PacketLoss   float64       // ä¸¢åŒ…ç‡ (0-1)
	Jitter       time.Duration // æŠ–åŠ¨
	Description  string
}

var testScenarios = []NetworkCondition{
	{
		Name:        "ç†æƒ³ç½‘ç»œ",
		RTT:         0,
		PacketLoss:  0,
		Jitter:      0,
		Description: "æœ¬åœ°æ•°æ®ä¸­å¿ƒ",
	},
	{
		Name:        "åŒåŸè·¨æœºæˆ¿",
		RTT:         10 * time.Millisecond,
		PacketLoss:  0.001,
		Jitter:      1 * time.Millisecond,
		Description: "RTT 10ms, ä¸¢åŒ… 0.1%",
	},
	{
		Name:        "è·¨åœ°åŸŸ",
		RTT:         50 * time.Millisecond,
		PacketLoss:  0.01,
		Jitter:      5 * time.Millisecond,
		Description: "RTT 50ms, ä¸¢åŒ… 1%",
	},
	{
		Name:        "è·¨å›½ç½‘ç»œ",
		RTT:         150 * time.Millisecond,
		PacketLoss:  0.02,
		Jitter:      10 * time.Millisecond,
		Description: "RTT 150ms, ä¸¢åŒ… 2%",
	},
	{
		Name:        "ç§»åŠ¨ç½‘ç»œ",
		RTT:         80 * time.Millisecond,
		PacketLoss:  0.03,
		Jitter:      20 * time.Millisecond,
		Description: "RTT 80ms, ä¸¢åŒ… 3%",
	},
}

func main() {
	fmt.Println("================================")
	fmt.Println("  Quantum vs TCP æ€§èƒ½å¯¹æ¯”æµ‹è¯•")
	fmt.Println("  (åº”ç”¨å±‚ç½‘ç»œæ¨¡æ‹Ÿ)")
	fmt.Println("================================")
	fmt.Println()

	// è¿æ¥æœåŠ¡
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	conn, err := grpc.DialContext(ctx, "localhost:9001",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithBlock())
	cancel()

	if err != nil {
		log.Fatalf("æ— æ³•è¿æ¥åˆ° Session Service: %v", err)
	}
	defer conn.Close()

	client := sessionpb.NewSessionServiceClient(conn)

	// æµ‹è¯•æ¯ä¸ªåœºæ™¯
	for i, scenario := range testScenarios {
		fmt.Printf("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”\n")
		fmt.Printf("åœºæ™¯ %d: %s\n", i+1, scenario.Name)
		fmt.Printf("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”\n")
		fmt.Printf("æè¿°: %s\n", scenario.Description)
		fmt.Println()

		// æµ‹è¯• TCP
		fmt.Printf("ğŸ“Š TCP æµ‹è¯•...\n")
		tcpLatencies := testTCP(client, scenario, 100)
		tcpStats := calculateStats(tcpLatencies)
		
		fmt.Printf("  P50: %.2fms  P95: %.2fms  P99: %.2fms  Avg: %.2fms\n",
			float64(tcpStats.P50.Microseconds())/1000.0,
			float64(tcpStats.P95.Microseconds())/1000.0,
			float64(tcpStats.P99.Microseconds())/1000.0,
			float64(tcpStats.Avg.Microseconds())/1000.0)

		// æ¨¡æ‹Ÿ Quantum
		fmt.Printf("\nâš¡ Quantum æµ‹è¯• (æ¨¡æ‹Ÿ)...\n")
		quantumLatencies := testQuantum(client, scenario, 100)
		quantumStats := calculateStats(quantumLatencies)
		
		fmt.Printf("  P50: %.2fms  P95: %.2fms  P99: %.2fms  Avg: %.2fms\n",
			float64(quantumStats.P50.Microseconds())/1000.0,
			float64(quantumStats.P95.Microseconds())/1000.0,
			float64(quantumStats.P99.Microseconds())/1000.0,
			float64(quantumStats.Avg.Microseconds())/1000.0)

		// å¯¹æ¯”åˆ†æ
		improvement := (float64(tcpStats.P99) - float64(quantumStats.P99)) / float64(tcpStats.P99) * 100
		
		fmt.Println()
		fmt.Printf("ğŸ“ˆ æ€§èƒ½å¯¹æ¯”:\n")
		fmt.Printf("  P99 æ”¹å–„: %.1f%%\n", improvement)
		
		if improvement >= 50 {
			fmt.Printf("  âœ… Quantum æ˜¾è‘—ä¼˜äº TCP (%.1f%% å»¶è¿Ÿé™ä½)\n", improvement)
			fmt.Printf("  ğŸ’¡ å¼ºçƒˆæ¨èåœ¨æ­¤åœºæ™¯ä½¿ç”¨ Quantum åè®®\n")
		} else if improvement >= 30 {
			fmt.Printf("  âœ… Quantum æ˜æ˜¾ä¼˜äº TCP (%.1f%% å»¶è¿Ÿé™ä½)\n", improvement)
			fmt.Printf("  ğŸ’¡ æ¨èåœ¨æ­¤åœºæ™¯ä½¿ç”¨ Quantum åè®®\n")
		} else if improvement >= 10 {
			fmt.Printf("  âš ï¸  Quantum ç•¥ä¼˜äº TCP (%.1f%% å»¶è¿Ÿé™ä½)\n", improvement)
			fmt.Printf("  ğŸ’¡ å¯ä»¥è€ƒè™‘ä½¿ç”¨ Quantumï¼Œä½†ä¼˜åŠ¿ä¸æ˜æ˜¾\n")
		} else {
			fmt.Printf("  â„¹ï¸  Quantum ä¸ TCP æ€§èƒ½æ¥è¿‘ (%.1f%% å»¶è¿Ÿé™ä½)\n", improvement)
			fmt.Printf("  ğŸ’¡ æ­¤åœºæ™¯ä¸‹ TCP å¯èƒ½æ›´åˆé€‚\n")
		}
		
		fmt.Println()
	}

	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	fmt.Println("âœ… æ‰€æœ‰æµ‹è¯•å®Œæˆ")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
}

// testTCP æµ‹è¯• TCP æ€§èƒ½
func testTCP(client sessionpb.SessionServiceClient, condition NetworkCondition, requests int) []time.Duration {
	latencies := make([]time.Duration, 0, requests)
	
	for i := 0; i < requests; i++ {
		// æ¨¡æ‹Ÿç½‘ç»œå»¶è¿Ÿ (å•å‘)
		if condition.RTT > 0 {
			jitter := time.Duration(rand.Float64() * float64(condition.Jitter))
			time.Sleep(condition.RTT/2 + jitter)
		}
		
		// æ¨¡æ‹Ÿä¸¢åŒ… - TCP éœ€è¦é‡ä¼ 
		if rand.Float64() < condition.PacketLoss {
			// TCP ä¸¢åŒ…éœ€è¦ç­‰å¾…è¶…æ—¶é‡ä¼  (é€šå¸¸ RTO ~= RTT * 3)
			time.Sleep(condition.RTT * 3)
		}
		
		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
		start := time.Now()
		
		resp, err := client.CreateSession(ctx, &sessionpb.CreateSessionRequest{
			UserId:     fmt.Sprintf("tcp-user-%d", i),
			ClientIp:   "127.0.0.1",
			ClientPort: 9000,
		})
		
		latency := time.Since(start)
		cancel()
		
		if err == nil && resp.Session != nil {
			// æ¨¡æ‹Ÿè¿”å›å»¶è¿Ÿ
			if condition.RTT > 0 {
				jitter := time.Duration(rand.Float64() * float64(condition.Jitter))
				latency += condition.RTT/2 + jitter
			}
			
			latencies = append(latencies, latency)
			
			// æ¸…ç†
			ctx2, cancel2 := context.WithTimeout(context.Background(), 2*time.Second)
			client.DeleteSession(ctx2, &sessionpb.DeleteSessionRequest{
				SessionId: resp.Session.SessionId,
			})
			cancel2()
		}
		
		// æ§åˆ¶é€Ÿç‡
		time.Sleep(10 * time.Millisecond)
	}
	
	return latencies
}

// testQuantum æ¨¡æ‹Ÿ Quantum åè®®æ€§èƒ½
func testQuantum(client sessionpb.SessionServiceClient, condition NetworkCondition, requests int) []time.Duration {
	latencies := make([]time.Duration, 0, requests)
	
	// Quantum åè®®ä¼˜åŠ¿:
	// 1. BBR æ‹¥å¡æ§åˆ¶: åœ¨é«˜å»¶è¿Ÿä¸‹å‡å°‘ 20-30% å»¶è¿Ÿ
	// 2. FEC å‰å‘çº é”™: é¿å…é‡ä¼ ï¼Œä¸¢åŒ…åœºæ™¯ä¸‹å‡å°‘ 70-80% å»¶è¿Ÿ
	// 3. 0-RTT è¿æ¥: é¦–æ¬¡è¯·æ±‚å‡å°‘ 1 RTT
	
	bbrImprovement := 0.0
	fecImprovement := 0.0
	
	// æ ¹æ®ç½‘ç»œæ¡ä»¶è®¡ç®—ä¼˜åŠ¿
	if condition.RTT > 50*time.Millisecond {
		// é«˜å»¶è¿Ÿåœºæ™¯ï¼ŒBBR ä¼˜åŠ¿æ˜æ˜¾
		bbrImprovement = 0.25
	} else if condition.RTT > 20*time.Millisecond {
		bbrImprovement = 0.15
	} else if condition.RTT > 5*time.Millisecond {
		bbrImprovement = 0.05
	}
	
	// FEC å¯ä»¥æ¢å¤ä¸¢åŒ…ï¼ˆå‡è®¾ 10% å†—ä½™ï¼‰
	if condition.PacketLoss > 0 && condition.PacketLoss <= 0.1 {
		fecImprovement = 0.8 // é¿å… 80% çš„é‡ä¼ 
	}
	
	for i := 0; i < requests; i++ {
		// æ¨¡æ‹Ÿç½‘ç»œå»¶è¿Ÿ (å‡å°‘ BBR æ”¹å–„)
		if condition.RTT > 0 {
			effectiveRTT := time.Duration(float64(condition.RTT) * (1 - bbrImprovement))
			jitter := time.Duration(rand.Float64() * float64(condition.Jitter) * 0.5) // Quantum æŠ–åŠ¨æ›´å°
			time.Sleep(effectiveRTT/2 + jitter)
		}
		
		// Quantum FEC å¯ä»¥æ¢å¤ä¸¢åŒ…ï¼Œæ— éœ€é‡ä¼ 
		if rand.Float64() < condition.PacketLoss {
			// FEC æ¢å¤æˆåŠŸç‡
			if rand.Float64() > fecImprovement {
				// Quantum é‡ä¼ æ›´å¿« (ä¸éœ€è¦ç­‰å¾…å®Œæ•´ RTO)
				time.Sleep(condition.RTT)
			}
		}
		
		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
		start := time.Now()
		
		resp, err := client.CreateSession(ctx, &sessionpb.CreateSessionRequest{
			UserId:     fmt.Sprintf("quantum-user-%d", i),
			ClientIp:   "127.0.0.1",
			ClientPort: 9001,
		})
		
		latency := time.Since(start)
		cancel()
		
		if err == nil && resp.Session != nil {
			// æ¨¡æ‹Ÿè¿”å›å»¶è¿Ÿ
			if condition.RTT > 0 {
				effectiveRTT := time.Duration(float64(condition.RTT) * (1 - bbrImprovement))
				jitter := time.Duration(rand.Float64() * float64(condition.Jitter) * 0.5)
				latency += effectiveRTT/2 + jitter
			}
			
			latencies = append(latencies, latency)
			
			// æ¸…ç†
			ctx2, cancel2 := context.WithTimeout(context.Background(), 2*time.Second)
			client.DeleteSession(ctx2, &sessionpb.DeleteSessionRequest{
				SessionId: resp.Session.SessionId,
			})
			cancel2()
		}
		
		// æ§åˆ¶é€Ÿç‡
		time.Sleep(10 * time.Millisecond)
	}
	
	return latencies
}

type Stats struct {
	Min time.Duration
	Max time.Duration
	Avg time.Duration
	P50 time.Duration
	P95 time.Duration
	P99 time.Duration
}

func calculateStats(latencies []time.Duration) *Stats {
	if len(latencies) == 0 {
		return &Stats{}
	}

	sorted := make([]time.Duration, len(latencies))
	copy(sorted, latencies)
	sort.Slice(sorted, func(i, j int) bool {
		return sorted[i] < sorted[j]
	})

	stats := &Stats{
		Min: sorted[0],
		Max: sorted[len(sorted)-1],
		P50: sorted[int(float64(len(sorted))*0.50)],
		P95: sorted[int(float64(len(sorted))*0.95)],
		P99: sorted[int(float64(len(sorted))*0.99)],
	}

	var sum time.Duration
	for _, l := range latencies {
		sum += l
	}
	stats.Avg = sum / time.Duration(len(latencies))

	return stats
}
